2004-08-04  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AttrEdit.py: use ComboBox
	* src/NameEdit.py: use ComboBox
	* src/gramps.glade: use ComboBox
	* src/plugins/ChangeTypes.py: use ComboBox
	* src/plugins/changetype.glade: use ComboBox

2004-08-03  Don Allingham  <dallingham@users.sourceforge.net>
	* src/WriteXML.py: always write the default location for a place
	* src/EditPerson.py: don't for write of multimedia objects if 
	not edited
	* src/ImageSelect.py: don't for write of multimedia objects if 
	not edited
	* src/AutoComp.py: build ListStore for ComboBox and Entry
	* src/AddSpouse.py: use ComboBox
	* src/Marriage.py: use ComboBox
	* src/gramps.glade: Switch from gtk.Combo to gtk.ComboBox and
	gtk.ComboxEntry
	* src/EventEdit.py: handle autocompletion
	* src/RelLib.py: remove cPickle import
	* src/GrampsDbBase.py: fix has_handle functions

2004-08-01  Don Allingham  <dallingham@users.sourceforge.net>
	* src/WriteGedcom.py: move up from plugins directory
	* src/ReadGedcom.py: move up from plugins directory
	* src/gedcomimport.glade: move up from plugins directory
	* src/gedcomexport.glade: move up from plugins directory

2004-07-31  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AddSpouse.py: fix gender selection
	* src/DbPrompter.py: support other DB formats
	* src/GrampsBSDDB.py: BSDDB format, derived from GrampsDbBase
	* src/GrampsDbBase.py: base class for database classes
	* src/GrampsGEDDB.py: GEDCOM format, derived from GrampsDbBase
	* src/GrampsXMLDB.py: XML format, derived from GrampsDbBase
	* src/PeopleModel.py: handle rebuilds better
	* src/RelLib.py: use try_to_find_person_from_handle
	* src/WriteXML.py: use gramps ids instead of handles
	* src/const.py.in: handle family relations correctly
	* src/gramps_main.py: remove prefix settings
	* src/data/gnome-mime-application-x-gramps-xml.png: new icon
	* src/data/gramps.applications: support for x-gramps-xml
	* src/data/gramps.keys: support for x-gramps-xml